[gd_scene load_steps=3 format=3 uid="uid://7oi6kcm73lxd"]

[ext_resource type="Script" path="res://GUI/pop_up_gui.gd" id="1_ii2pp"]
[ext_resource type="PackedScene" uid="uid://cf2pewcvtrtic" path="res://GUI/UX_button.tscn" id="2_xot16"]

[node name="PopUpGUI" type="Control" groups=["Gui"]]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ii2pp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 496.0
offset_bottom = 333.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleSpacing" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="Title" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/TitleSpacing"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
bbcode_enabled = true
text = "[center][color=black]Pop Up Event[/color]
"

[node name="TextBox" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"WhitePanelContainer"

[node name="Desciption" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TextBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Lorem ipsum dolor sit amet"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Confirm" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_xot16")]
layout_mode = 2
size_flags_horizontal = 3
text = "Best√§tigen"

[node name="Cancel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_xot16")]
layout_mode = 2
size_flags_horizontal = 3
text = "Abbrechen"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
